--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:topRightRadius="@dimen/dimen32"
-        android:topLeftRadius="@dimen/dimen32"/>
+    <corners android:topRightRadius="@dimen/dimen40"
+        android:topLeftRadius="@dimen/dimen40"
+        android:bottomLeftRadius="@dimen/dimen40"
+        android:bottomRightRadius="@dimen/dimen40"/>
 <!--    <solid android:color="#E6FFFFFF" />-->
-    <solid android:color="@color/transparent50"/>
+    <solid android:color="@color/white"/>
 </shape>
