--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="homeViewModel"
-            type="com.historymakers.gitter.view.home.HomeViewModel" />
+            type="io.github.occultus73.ui.home.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
