--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="homeViewModel"
-            type="com.historymakers.gitter.view.home.HomeViewModel" />
+            type="io.github.occultus73.ui.home.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
