--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.historymakers.gitter.view.home.search.SearchFragment"
+        android:name="io.github.occultus73.ui.home.search.SearchFragment"
         android:label="SearchFragment">
         <action
             android:id="@+id/action_searchFragment_to_userListFragment"
@@ -15,16 +15,15 @@
     </fragment>
     <fragment
         android:id="@+id/userListFragment"
-        android:name="com.historymakers.gitter.view.home.users.UserListFragment"
+        android:name="io.github.occultus73.ui.home.users.UserListFragment"
         android:label="UserListFragment">
-
         <action
             android:id="@+id/action_userListFragment_to_userDetailsFragment"
             app:destination="@id/userDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/userDetailsFragment"
-        android:name="com.historymakers.gitter.view.home.userdetails.UserDetailsFragment"
+        android:name="io.github.occultus73.ui.home.userdetails.UserDetailsFragment"
         android:label="UserDetailsFragment"
         tools:layout="@layout/fragment_user_details" >
 
