--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FD7400</color>
+    <color name="colorPrimaryDark">#FD7400</color>
     <color name="colorAccent">#FD7400</color>
     <color name="white">#FFFFFF</color>
     <color name="darkgray">#47535F</color>
-    <color name="transparent50">#80FFFFFF</color>
+    <color name="transparent50">#33FFFFFF</color>
 </resources>
