--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/launcher_bg"
+    android:id="@+id/splash"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
